# Dodge-The-Creeps-Cpp

./: .clang-format  .gitignore  CMakeLists.txt  GDNLib.tres  HUD.tscn  HUDFont.tres  Main.tscn  Mob.tscn  Player.tscn  README.md  compile_flags.txt  export_presets.cfg  project.godot
.github/workflows/: ccpp.yml
src/: HUD.cpp  HUD.hpp  Main.cpp  Main.hpp  Mob.cpp  Mob.hpp  Player.cpp  Player.hpp  export.cpp
